--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.8'
 services:
-  stats-server:
+  stats:
     build: stats/server
     image: stats-server-image
     container_name: stats-server-container
@@ -25,7 +25,7 @@ services:
     volumes:
       - ./data:/data/stats-db
 
-  ewm-service:
+  ewm:
     build: ewm
     image: ewm-service-image
     container_name: ewm-service-container
@@ -34,15 +34,16 @@ services:
     depends_on:
       - ewm-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5431/ewm
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=root
+      - STATS_CLIENT_URL=http://stats:9090
 
   ewm-db:
     image: postgres:14-alpine
     container_name: ewm-db-container
     ports:
-      - "6543:5431"
+      - "6543:5432"
     environment:
       - POSTGRES_DB=ewm
       - POSTGRES_USER=root
