--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.8'
 services:
-  stats:
+  stats-service:
     build: stats/server
     image: stats-server-image
     container_name: stats-server-container
@@ -25,7 +25,7 @@ services:
     volumes:
       - ./data:/data/stats-db
 
-  ewm:
+  ewm-service:
     build: ewm
     image: ewm-service-image
     container_name: ewm-service-container
