--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.8'
 services:
-  ewm-service:
+  stats-server:
     build: stats/server
     image: stats-server-image
     container_name: stats-server-container
